<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyWeiXinActivity!</string>
    <string name="app_name">MyWeiXin</string>
    <string name="main1">微信</string>
<string name="main2">登录</string>
<string name="main3">使用QQ号或微信号登录</string>
<string name="main4">注册</string>
<string name="main5">如果你没有QQ号，可以使用手机注册</string>
<string name="login_user_hint">QQ号/微信号/手机号</string>
<string name="login_passwd_hint">密码</string>
<string name="login_forget_passwd">忘记密码?</string>
<string name="dialog1">通过qq号找回密码</string>
<string name="dialog2">通过邮箱找回密码</string>
<string name="dialog3">通过手机号找回密码</string>
<string name="dialog4">取消</string>
<string name="regist_hint1">昵称</string>
<string name="regist_hint2">密码</string>
<string name="regist_hint3">确认密码</string>
<string name="menutext1">消息提示</string>
<string name="menutext2">消息接收</string>
<string name="menutext3">在线管理</string>
<string name="menuRadio1_1">关</string>
<string name="menuRadio1_2">开</string>
<string name="menutext4">其他</string>
</resources>