<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:layout_gravity="center"
   >
   <RelativeLayout
       android:id="@+id/regist_Re1"
       android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_top_bg" >

        <Button
            android:id="@+id/regist_reback_bu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_reback_selector" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/regist_LE1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/regist_Re1">
        <EditText
            android:id="@+id/regist_edit1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selector"
            android:layout_marginTop="30dp"
            android:hint="@string/regist_hint1">
            </EditText>
       <EditText
           android:id="@+id/regist_edit2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selector"
            android:hint="@string/regist_hint2"
            android:layout_marginTop="5dp"
            android:password="true"/>
       <EditText
           android:id="@+id/regist_edit3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selector"
            android:hint="@string/regist_hint3"
            android:layout_marginTop="5dp"
            android:password="true"/>
           
        <Button
            android:id="@+id/regist_bu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_login_selector"
            android:text="@string/main4"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>
        </LinearLayout>
</RelativeLayout>