<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:layout_gravity="center"
   >
   <RelativeLayout
       android:id="@+id/loginRe1"
       android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_top_bg" >

        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_reback_selector" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/loginLE1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/loginRe1">
        <EditText
            android:id="@+id/login_user_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selector"
            android:layout_marginTop="30dp"
            android:hint="@string/login_user_hint">
            </EditText>
       <EditText
           android:id="@+id/login_passwd_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selector"
            android:hint="@string/login_passwd_hint"
            android:layout_marginTop="5dp"
            android:password="true"/>
           
        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_login_selector"
            android:text="@string/main2"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>
            
        <Button
            android:id="@+id/forget_passwd"
            android:background="@drawable/login_forget_passwd_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_passwd"
            android:textSize="20sp">
            </Button>
        </LinearLayout>

    

</RelativeLayout>