<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#ffffff">
    <RelativeLayout
        android:id="@+id/mainRe1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
		<ImageView
		    android:id="@+id/mainImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/copyright" />
		<TextView
		    android:id="@+id/mainText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/main1"
		    android:textColor="#FFCC00"
		    android:layout_marginTop="30dp"
		    android:layout_toRightOf="@+id/mainImg"
		    android:textSize="35sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainLi1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/mainRe1"
        android:gravity="center"
        android:orientation="vertical"    >

        <Button 
            android:id="@+id/main_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_login_selector"
            android:text="@string/main2"
            android:textSize="20sp"
            />
            
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/main3"
    	    android:textColor="#000033"
    	    android:textSize="15sp"
    	    android:gravity="center"/>
    	    
    	<Button 
    	     android:id="@+id/main_regist_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_regist_selector"
            android:text="@string/main4"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            >
            </Button>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/main3"
    	    android:textColor="#000033"
    	    android:gravity="center"
    	    android:textSize="15sp">     
    	    </TextView>     
    </LinearLayout>
    
 </RelativeLayout>