<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/menuText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menutext1"
        android:textColor="#FFCC33"/>
    <RelativeLayout
        android:id="@+id/menuRe1_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/menuRe1_1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="静音模式"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe1_1Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe1_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe1_2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="消息震动提示"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe1_2Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe1_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe1_3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="锁屏时消息提示弹窗"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe1_3Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe1_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe1_4Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刺痛通知栏挂Q设置"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe1_4Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
	</LinearLayout>
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/menuText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menutext2"
        android:textColor="#FFCC33"/>
    <RelativeLayout
        android:id="@+id/menuRe2_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/menuRe2_1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="接收群消息设置"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe2_1Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe2_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe2_2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2G/3G下自动切换图片"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe2_2Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe2_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe2_3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开机自动接收信息"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe2_3Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/menuText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menutext3"
        android:textColor="#FFCC33"/>
    <RelativeLayout
        android:id="@+id/menuRe3_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/menuRe3_1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="允许设备与电脑"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/menuRe3_1_2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="同时在线"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_below="@+id/menuRe3_1Text"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/menuRe3_1_2Text">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开"
               />
            </RadioGroup>
       </RelativeLayout>
       <RelativeLayout
        android:id="@+id/menuRe3_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/menuRe3_2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="多终端在线状态管理"
            android:textSize="20sp"
            android:textColor="#aaaaaa"
            android:layout_alignParentLeft="true"/>
       </RelativeLayout>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/menuText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menutext4"
        android:textColor="#FFCC33"/>
    <RelativeLayout
        android:id="@+id/menuRe4_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button 
            android:id="@+id/menubu1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="自动回复设置"
            android:textColor="#aaaaaa"
            android:textSize="20sp"/>
        <Button 
            android:id="@+id/menubu2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="自动回复设置"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:layout_below="@+id/menubu1"/>
        <Button 
            android:id="@+id/menubu3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="自动回复设置"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:layout_below="@+id/menubu2"/>
        <Button 
            android:id="@+id/menubu4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="自动回复设置"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:layout_below="@+id/menubu3"/>
        
       </RelativeLayout>
	</LinearLayout>
</LinearLayout>
</ScrollView>